# aoc-2023

./: pyproject.toml
2015/Day 1/: part1.py
2015/Day 3/: part1.py  part2.py
2023/Day 1/: part1.py
2023/Day 10/: part1.py  part2.py
2023/Day 11/: part1.py  part2.py
2023/Day 2/: part2.py
2023/Day 3/: part1.py  part2.py
2023/Day 4/: part1.py  part2.py
2023/Day 5/: part1.py  part2.py
2023/Day 6/: part1.py  part2.py
2023/Day 7/: part1.py  part2.py
2023/Day 8/: part1.py  part2.py
2023/Day 9/: part1.py  part2.py
Day 1/: part2.py
Day 2/: part1.py
